Wed May  7 08:01:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/WB26WorkspaceCreator.pm:
          Improved getting the location of the .project/.wrproject file
          at the moment environment variables are used

Tue May  6 18:05:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/WB26WorkspaceCreator.pm:
          When we find MPC ADD DIRECTIVES set write to 1 so that when a
          project has no dependencies we remove this MPC ADD DIRECTIVES
          from the generated files

        * templates/wb26.mpd:
          Use tabs instead of space

Tue May  6 13:40:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/WB26WorkspaceCreator.pm
        * templates/wb26.mpd:
          Also generate the referenced projects in the .project file

Tue May  6 12:26:09 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/WB26WorkspaceCreator.pm:

          Updated the code to work with the .wrproject.

        * templates/wb26wrproject.mpd:

          Added the lines to allow MPC to add dependencies after the
          workspace has been created.

Tue May  6 07:12:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/WB26WorkspaceCreator.pm:
          Added helper to create subprojects

Mon May  5 15:45:04 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * config/mpich.mpb:

          Use MPI_ROOT instead of MPICH_ROOT.  This is in keeping with the
          generic-ness of the environment variables to allow drop-in
          replacements for different implementations.

        * config/openmpi.mpb:

          Added "requires += mpi".

        * modules/ProjectCreator.pm:

          Fixed a bug where files added through a directory would not be
          removed as duplicate if the generated files had the 'gendir' value
          set on them with one or more slash.  This only affected Windows
          project types.

        * registry.pl:
